# metrics-notifier

./: Cargo.toml
src/: client.rs  cloud_watch_metrics_client.rs  ec2_instance_client.rs  error.rs  main.rs  metric.rs  time_range.rs
test_resources/error/: get_metrics_data.xml
test_resources/valid/: describe_instances.xml  get_metrics_data.xml
