[package]
name = "metrics-notifiier"
version = "0.1.0"
authors = ["KouT127 <kou26haru@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.45.0"
rusoto_cloudwatch = "0.45.0"
rusoto_ec2 = "0.45.0"
rusoto_mock = "0.45.0"
serde = "1.0.117"
serde_json = "1.0.59"
anyhow = "1.0.34"

async-trait = "0.1.42"

openssl = { version = "0.10", features = ["vendored"] }

lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
tokio = { version = "0.2", features = ["full"] }
bigdecimal = "0.2.0"
